modificación de logos de footer

--- a/section/carrito.html
+++ b/section/carrito.html
@@ -73,9 +73,9 @@
     <footer>
         <div class="sharefooter">Compartí con tus amigos</div>
         <div class="redes"> 
-            <a href="https://api.whatsapp.com/send?phone=2995313015" target="_blank"><img class="logo_redes" src="./img/whatsapp.svg" alt="logo-whatsapp"></a>
-            <a href="https://www.instagram.com/phoenix.impresiones.3d/" target="_blank"><img class="logo_redes" src="./img/instagram.svg" alt="logo-instagram"></a>
-            <a href="https://web.telegram.org/z/" target="_blank"><img class="logo_redes" src="./img/telegram.svg" alt="logo-telegram"></a>
+            <a href="https://api.whatsapp.com/send?phone=2995313015" target="_blank"><img class="logo_redes" src="../img/whatsapp.svg" alt="logo-whatsapp"></a>
+            <a href="https://www.instagram.com/phoenix.impresiones.3d/" target="_blank"><img class="logo_redes" src="../img/instagram.svg" alt="logo-instagram"></a>
+            <a href="https://web.telegram.org/z/" target="_blank"><img class="logo_redes" src="../img/telegram.svg" alt="logo-telegram"></a>
         </div>
         <div class="ventas">Venta Online</div>
         
