--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta charset="UTF-8"> <!-- meta = meta datos / charset = indicaciones o funcionalidad / utf-8 = funcionalidad de caracteres-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- adaptacion a los anchos de banda de los diferentes dispositivos-->
+    <meta name="keywords" content="Impresiones 3D, Mates, Macetas, Llaveros, Miniaturas">
+    <meta name="description" content="Neuquén - Argentina / Envios a todo el país. Impresiones 3d, mates, macetas, llaveros, acces. para celular y mucho más">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/estilos.css">
     <!--Etiquetas de CSS siempre debajo de bootstrap-->
     <title>Inicio</title> <!-- titulo de la pestaña que estoy abriendo / etiqueta cerrada, cierra en la misma linea -->
 </head>
@@ -21,7 +23,7 @@
     <header> 
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">INICIO</a>
+                <a class="navbar-brand" href="index.html">Inicio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
