--- a/section/productos.html
+++ b/section/productos.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Impresiones 3D, Mates, Macetas, Llaveros, Miniaturas">
+    <meta name="description" content="Neuquén - Argentina / Envios a todo el país. Impresiones 3d, mates, macetas, llaveros, acces. para celular y mucho más">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>Productos</title>
 </head>
 <main>
     <h1>Phoenix Impresiones 3D</h1>
-    <h2>Donde tus ideas se hacen realidad</h2>
+    <h2>Donde tus ideas se materializan</h2>
     <!-- la seccion más importante donde estan h1, h2, h3 ... -->
     <!--solo puedo tener un único h1 por HTML, de ser necesarios estan los h2, h3 ...-->
 </main> 
@@ -19,7 +21,7 @@
         <!--encabezado de de nuestro sitio, va a tener la nav-->
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="productos.html">PRODUCTOS</a>
+                <a class="navbar-brand" href="productos.html">Productos</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
