--- a/section/productos.html
+++ b/section/productos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Impresiones 3D, Mates, Macetas, Llaveros, Miniaturas">
+    <meta name="keywords" content="Impresiones 3D, Mates, Macetas, Llaveros, Miniaturas, anime, posavasos, marvel">
     <meta name="description" content="Neuquén - Argentina / Envios a todo el país. Impresiones 3d, mates, macetas, llaveros, acces. para celular y mucho más">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
