Rediseño completo de HTML - Nosotros

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <main>
         <h1>Phoenix Impresiones 3D</h1>
-        <h2>Donde tus ideas se materializan</h2>
+        <h2>Donde materializamos tus ideas</h2>
             <!-- la seccion más importante donde estan h1, h2, h3 ... -->
             <!--solo puedo tener un único h1 por HTML, de ser necesarios estan los h2, h3 ...-->
     </main>
@@ -49,10 +49,9 @@
     </header>
 
         <section class="img_index">
-                <img class="imagenes__index" src="./img/falconposavaso.png" alt="posavaso de falcon de avengers">
-                <img class="imagenes__index"src="./img/spiderposavasos.png" alt="posavaso de spiderman de avengers">
-                <img class="imagenes__index"src="./img/maceta-escalera.jpg" alt="maceta doble">
-            
+                <img class="imagenes__index" src="./img/llavero-mjolnir.jpeg" alt="llavero-mjolnir">
+                <img class="imagenes__index" src="./img/maceta-escalera.jpg" alt="maceta-escalera">
+                <img class="imagenes__index" src="./img/patricioestrella-portaesponja-acero.jpeg" alt="patricio-portaesponja">
         </section>
 
         <article>
