--- a/section/contactanos.html
+++ b/section/contactanos.html
@@ -12,7 +12,7 @@
 </head>
 <main>
     <h1>Phoenix Impresiones 3D</h1>
-    <h2>Donde tus ideas se materializan</h2>
+    <h2>Donde materializamos tus ideas</h2>
     <!-- la seccion más importante donde estan h1, h2, h3 ... -->
     <!--solo puedo tener un único h1 por HTML, de ser necesarios estan los h2, h3 ...-->
 </main> 
