Modificación en Medias Querys

--- a/section/nosotros.html
+++ b/section/nosotros.html
@@ -63,7 +63,7 @@
                 <div class="c">Nuestro proyecto nace a partir de una idea de crear pequeñas piezas 3D en casa, dandonos cuenta que la imaginación es tan grande que puede llevar a cualquier persona a realizar sus propios diseños con tan solo un poco de tiempo y haciendo volar la imaginación.</div>
             </div>
             </div>
-            <p class="primer-parrafo">Te invitamos a que conozcas nuestra web y dejes tus opiniones</p>
+            <p class="primer-parrafo">Te invitamos a que recorras nuestra web y dejes tus opiniones</p>
     </section>
     
     <footer>
