modificación en grid, agregados de shadows en textos e imagenes

--- a/section/nosotros.html
+++ b/section/nosotros.html
@@ -55,11 +55,11 @@
                 <div class="a">Misión: Nos enfocamos en desarollar diferentes tipo de accesorios para el hogar y uso personal, materializando tus ideas a través de las impresiones 3D. Esta empresa se encuenta ubicada en la ciudad de Neuquén. La misma cuenta con una atención personalizada, asesoramiento y servicio post venta, todo de forma online. </div>
             </div>
                 <div class="bi_box">
-                <img class="bi" src="../img/llavero-mjolnir.jpeg" alt="llavero-mjolnir">
+                <img class="bi" src="../img/Coffee-Font.png" alt="letrero-fuente-coffee">
                 <div class="b">Visión: Nuestro objetivo es llegar a ser de los más grandes desarrolladores de todo el país, innovando la industria del diseño e impresión 3D, llegando a realizar grandes proyectos incorporando a un equipo profesional. </div>
             </div>
             <div class="ci_box">   
-                <img class="ci" src="../img/llavero-portacelular.jpeg" alt="llavero-portacelular">
+                <img class="ci" src="../img/llavero-a.jpeg" alt="llavero-letra-A">
                 <div class="c">Nuestro proyecto nace a partir de una idea de crear pequeñas piezas 3D en casa, dandonos cuenta que la imaginación es tan grande que puede llevar a cualquier persona a realizar sus propios diseños con tan solo un poco de tiempo y haciendo volar la imaginación.</div>
             </div>
             </div>
