--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./css/estilos.css">
     <!--Etiquetas de CSS siempre debajo de bootstrap-->
     <title>Inicio</title> <!-- titulo de la pestaña que estoy abriendo / etiqueta cerrada, cierra en la misma linea -->
+
 </head>
 <body>
     <main>
@@ -69,8 +70,12 @@
                 <div class="ventas">Venta Online</div>
             </div>
         </footer>
+        
+        <!-- <script src="main.js"></script> -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</body> <!-- etiqueta anidadas (se abren y se cierran en diferentes renglones) -->
+        
+
+    </body> <!-- etiqueta anidadas (se abren y se cierran en diferentes renglones) -->
 
 </html>
 
