cambios generales en SASS y agregado de items a JS

--- a/section/contactanos.html
+++ b/section/contactanos.html
@@ -48,7 +48,7 @@
     
     <p class="title_form">Dejanos tus datos para que nos comuniquemos</p> 
 
-    <div class="container_fluid_formulario">
+    <div class="container_fluid_formulario" id="formulario">
         <div class="row g-3">
             <div class="col">
             <input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre">
